# wild-llamas

./: .gitignore  Experiments.md  README.md  download-datasets.bash  eval.py  eval_current.py  eval_current_hf.py  eval_current_reasoning.py  eval_llama.py  eval_llama_hf.py  eval_merged.py  eval_merged_hf.py  eval_merged_reasoning.py  main-reasoning.py  main.py  merge.py  plot_accuracy_progression.py  pyproject.toml  quickruns.sh  skipped_models.csv
config/: config-reasoning.yaml  config.yaml  main.yaml
config/experiment/: ema.yaml  ema_holdout.yaml  ema_holdout_flipped.yaml  greedy_holdout.yaml  greedy_holdout_flipped.yaml  weight_averaging.yaml
data/: all_models.csv  skipped_models.csv
plotting/: plot_accuracy_progression.py  plot_beta_sweep.py  plot_sweep_results.py
scripts/: analyze_beta_sweep.sh  analyze_sweep_beta.sh  analyze_sweep_method.sh  cleanup.sh  quickruns.sh  remove_skipped_models.py
slurm/: main.sh  run.sh  run_beta_sweep_slurm.sh  run_ferranti.sh  run_ferranti_multi_gpu.sh  run_galvani.sh  run_galvani_multi_gpu.sh  run_mem.sh  run_sweep_beta.sh  run_sweep_method.sh
tests/: test_edge_cases.py  test_get_accuracy.py  test_greedy_simulation.py  test_merge.py  test_unmerging.py
wildllamas/: eval.py  eval_template.py  merge.py
