[project]
name = "wild-llamas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "huggingface-hub>=0.32.4",
    "hydra-core>=1.3.2",
    "opencompass>=0.4.2",
    "ruff>=0.11.13",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
