[project]
name = "wild-llamas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "huggingface-hub>=0.32.4",
    "hydra-core>=1.3.2",
    "lmdeploy>=0.2.2 ; sys_platform == 'linux'",
    "opencompass>=0.4.2",
    "pytorchvideo>=0.1.5",
    "ruff>=0.11.13",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.52.4",
]
