[project]
name = "wild-llamas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "av<16",
    "huggingface-hub>=0.32.4",
    "hydra-core>=1.3.2",
    "latex2sympy2_extended>=1.10.1",
    "lmdeploy>=0.2.2",
    "lmdeploy>=0.2.2 ; sys_platform == 'linux'",
    "math_verify>=0.7.0",
    "numpy>=1.26.4",
    "opencompass>=0.4.2",
    "pandas>=1.5.3",
    "pytorchvideo>=0.1.5",
    "ruff>=0.11.13",
    "setuptools>=80.9.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.52.4",
]
